--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <script type="text/javascript" src="./main.js"></script>
     <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
-      <fieldset class="first_fieldset">
+      <fieldset class="fieldset first_fieldset">
         <legend>Personal information</legend>
         <label class="field-form">
           Surname:
@@ -55,7 +55,7 @@
             required>
         </label>
       </fieldset>
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>Registration</legend>
         <label  class="field-form">
           E-mail:
@@ -75,21 +75,27 @@
             required>
         </label>
       </fieldset>
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
         <label  class="field-form">
           Do you love cats?
           <label >
-            <input type="radio" name="loveCats" value="y">
+            <input
+              type="radio"
+              name="loveCats"
+              value="y">
             Yes
           </label>
           <label>
-            <input type="radio" name="loveCats" value="n">
+            <input
+              type="radio"
+              name="loveCats"
+              value="n">
             No
           </label>
         </label>
         <label  class="field-form">
-          What is your favourite color?
+          What is your favorite color?
           <input type="color" name="favouriteColor">
         </label>
         <label  class="field-form">
@@ -97,7 +103,7 @@
           <input type="time" name="timeForSleep">
         </label>
         <label  class="field-form">
-          What are your favourite brand of cars?
+          What are your favorite brand of cars?
           <select name="brand" multiple>
             <option value="bmw">BMW</option>
             <option value="audi">Audi</option>
@@ -109,7 +115,7 @@
           <input type="range" name="rateOfWork">
         </label>
       </fieldset>
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>Additional info:</legend>
         <label  class="field-form">
           Comments:
