finally fixed(I hope)

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
         <legend>Personal information</legend>
         <label class="field-form">
           Surname:
-          <input type="text"
+          <input
+            type="text"
             name="surname"
             autocomplete="off"
             required>
