--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
             type="text"
             name="surname"
             autocomplete="off"
-            required>
+            required
+          >
         </label>
         <label class="field-form">
           Name:
@@ -29,7 +30,8 @@
             type="text"
             name="name"
             autocomplete="off"
-            required>
+            required
+          >
         </label>
         <label class="field-form">
           How old are You?
@@ -39,21 +41,24 @@
             max="100"
             value="12"
             name="age"
-            required>
+            required
+          >
         </label>
         <label class="field-form">
           Full date of birth:
           <input
             type="date"
             name="birthday"
-            required>
+            required
+          >
         </label>
         <label class="field-form last-field">
           I accept the term of the agreement
           <input
             type="checkbox"
             name="terms"
-            required>
+            required
+          >
         </label>
       </fieldset>
       <fieldset class="fieldset">
@@ -64,7 +69,8 @@
             type="email"
             placeholder="email@example.com"
             name="e-mail"
-            required>
+            required
+          >
         </label>
         <label class="field-form last-field">
           Password:
@@ -73,7 +79,8 @@
             minlength="5"
             maxlength="30"
             name="password"
-            required>
+            required
+          >
         </label>
       </fieldset>
       <fieldset class="fieldset">
@@ -84,14 +91,16 @@
             <input
               type="radio"
               name="loveCats"
-              value="y">
+              value="y"
+            >
             Yes
           </label>
           <label>
             <input
               type="radio"
               name="loveCats"
-              value="n">
+              value="n"
+            >
             No
           </label>
         </label>
